# musicsoftware

./: .gitignore  CMakeLists.txt  ChordAnalyzer.cpp  ChordAnalyzer.h  MidiKeyboardMonitor.cpp  MidiKeyboardMonitor.h  MidiManager.cpp  MidiManager.h  MusicTheoryEngine.cpp  MusicTheoryEngine.h  MusicTypes.h  README.md  UIManager.cpp  UIManager.h  main.cpp
